k8s/base/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: toymodel-vsvc
spec:
  hosts:
  - toymodel
  http:
  - name: primary
    route:
    - destination:
        host: toymodel-stable
        port:
          number: 8000
      weight: 100
    - destination:
        host: toymodel-canary
        port:
          number: 8000
      weight: 0
